--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -16,21 +16,22 @@
         android:id="@+id/noConnection"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_no_connection"
-        android:visibility="gone" />
+        android:background="@drawable/bg_no_connection" >
 
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="30dp"
-        android:backgroundTint="@color/red"
-        android:padding="14dp"
-        android:text="TRY AGAIN"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp16"
+            android:layout_marginVertical="@dimen/dp30"
+            android:backgroundTint="@color/red"
+            android:padding="@dimen/dp14"
+            android:text="@string/try_again"
+            android:textSize="@dimen/sp16"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
