--- a/app/src/main/res/layout/item_playlists.xml
+++ b/app/src/main/res/layout/item_playlists.xml
@@ -2,27 +2,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:paddingVertical="8dp"
-    android:paddingHorizontal="16dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="@dimen/dp16"
+    android:paddingVertical="@dimen/dp8">
 
     <TextView
         android:id="@+id/text_title"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:text="title"
-        android:textSize="28sp"
+        android:layout_width="@dimen/dp200"
+        android:layout_height="@dimen/dp40"
+        android:layout_marginStart="@dimen/dp8"
+        android:text="@string/title"
+        android:textSize="@dimen/sp28"
         app:layout_constraintStart_toEndOf="@+id/imgVideo"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:scaleType="centerCrop"
+
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imgVideo"
-        android:layout_width="120dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_launcher_background"
+        android:layout_width="@dimen/dp120"
+        android:layout_height="@dimen/dp80"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/roundImageview" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
