--- a/app/src/main/res/layout/item_playlists.xml
+++ b/app/src/main/res/layout/item_playlists.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="@dimen/dp16"
@@ -8,11 +9,13 @@
 
     <TextView
         android:id="@+id/text_title"
-        android:layout_width="@dimen/dp200"
-        android:layout_height="@dimen/dp40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp8"
         android:text="@string/title"
-        android:textSize="@dimen/sp28"
+        android:textSize="@dimen/sp20"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/videoCount"
         app:layout_constraintStart_toEndOf="@+id/imgVideo"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,10 +24,36 @@
         android:id="@+id/imgVideo"
         android:layout_width="@dimen/dp120"
         android:layout_height="@dimen/dp80"
+        android:background="@drawable/ic_launcher_background"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/roundImageview" />
 
+   <TextView
+       android:textSize="12sp"
+       android:textColor="@color/white"
+       android:background="@drawable/bg_text_playlist"
+       android:gravity="right"
+       android:text="@string/playlist"
+       android:paddingEnd="@dimen/dp26"
+       android:paddingBottom="@dimen/dp6"
+       app:layout_constraintEnd_toEndOf="@+id/imgVideo"
+       app:layout_constraintStart_toStartOf="@+id/imgVideo"
+       app:layout_constraintBottom_toBottomOf="@+id/imgVideo"
+       android:layout_width="@dimen/dp120"
+       android:layout_height="wrap_content"
+       tools:ignore="RtlHardcoded,RtlSymmetry" />
+
+    <TextView
+        android:id="@+id/videoCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp8"
+        android:text="@string/_0_video_series"
+        android:textSize="@dimen/sp12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgVideo"
+        app:layout_constraintTop_toBottomOf="@+id/text_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
