--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="sp28">28sp</dimen>
     <dimen name="dp120">120dp</dimen>
     <dimen name="dp80">80dp</dimen>
+    <dimen name="sp12">12sp</dimen>
+    <dimen name="dp26">26dp</dimen>
+    <dimen name="sp20">20sp</dimen>
 </resources>
