--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.playlist.PlaylistActivity">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerPlaylists"
@@ -12,26 +12,15 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/item_playlists" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <include
         android:id="@+id/noConnection"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bg_no_connection" >
+        layout="@layout/item_check_internet"
+        android:visibility="gone" />
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/dp16"
-            android:layout_marginVertical="@dimen/dp30"
-            android:backgroundTint="@color/red"
-            android:padding="@dimen/dp14"
-            android:text="@string/try_again"
-            android:textSize="@dimen/sp16"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <include
+        android:id="@+id/progress"
+        layout="@layout/item_progress_bar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
