--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="@dimen/dp16"
     android:paddingVertical="@dimen/dp8">
 
+
     <TextView
-        android:id="@+id/text_title"
-        android:layout_width="0dp"
+        android:id="@+id/video_title"
+        android:layout_width="@dimen/dp0"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp8"
+        android:layout_marginTop="@dimen/dp12"
         android:ellipsize="end"
         android:maxLines="2"
         android:text="@string/title"
         android:textSize="@dimen/sp20"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/videoCount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgVideo"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <include
         android:id="@+id/lottie"
@@ -29,10 +30,9 @@
         android:layout_height="@dimen/dp0"
         android:padding="@dimen/dp6"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/text_title"
+        app:layout_constraintEnd_toStartOf="@+id/video_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imgVideo"
@@ -42,32 +42,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/roundImageview" />
-
-    <TextView
-        android:layout_width="@dimen/dp120"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_text_playlist"
-        android:gravity="right"
-        android:paddingEnd="@dimen/dp26"
-        android:paddingBottom="@dimen/dp6"
-        android:text="@string/playlist"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgVideo"
-        app:layout_constraintEnd_toEndOf="@+id/imgVideo"
-        app:layout_constraintStart_toStartOf="@+id/imgVideo"
-        tools:ignore="RtlHardcoded,RtlSymmetry" />
-
-    <TextView
-        android:id="@+id/videoCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp8"
-        android:text="@string/_0_video_series"
-        android:textSize="@dimen/sp12"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgVideo"
-        app:layout_constraintTop_toBottomOf="@+id/text_title" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
