--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -130,6 +130,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
+            android:id="@+id/btnPlay"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/dp20"
             android:layout_marginBottom="@dimen/dp40"
