--- a/app/src/main/res/layout/item_progress_bar.xml
+++ b/app/src/main/res/layout/item_progress_bar.xml
@@ -4,11 +4,19 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ProgressBar
+    <FrameLayout
         android:id="@+id/progress"
-        android:indeterminateTint="@color/red"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:indeterminateTint="@color/red"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </FrameLayout>
+
 
 </FrameLayout>
